--- a/public/main.css
+++ b/public/main.css
@@ -87,3 +87,10 @@ body {
     border-bottom: 0;
   }
 }
+
+.afb{
+	border-color: black;
+  	border-style: solid;
+  	border-width: 1px;
+  	width: 350px;
+}
