--- a/public/main.css
+++ b/public/main.css
@@ -89,9 +89,10 @@ body {
 }
 
 .afb{
-	border-color: black;
-  	border-style: solid;
-  	border-width: 1px;
-  	width: 350px;
-  	margin-top: 25px;
+  border-color: black;
+  border-style: solid;
+  border-width: 1px;
+  width: 350px;
+  margin-top: 13px;
+  margin-bottom: 19px;
 }
